Fix toggled navigation display (remove extra space between right-nav and left-nav links) and fix logo image size to be responsive.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,7 @@ body {
         color: #cda716;
         width: 100%;
         position: fixed;
-        padding: 1rem 0 3rem;
+        padding: 0 1rem 3rem;
         font-size: 120%;
         letter-spacing: 3px;
         display: flex;
@@ -47,32 +47,35 @@ body {
         #nav-toggle {
             display: none;
         }
-
+        /*Adds background to the nav bar when toggled*/   
         #nav-toggle:checked~.nav-bar {
-            display: block;
-            height: fit-content;
+            display: grid;
+            justify-content: start;
             width: 100%;
-            position: absolute;
+            height: 100%;
+            top: 0;
+            z-index: 99;
+        }
+        #nav-toggle:checked~#nav-icon {
+            position: fixed;
+            background: rgba(36, 39, 72, 1);
+            width: 100%;
+            height: 100%;
         }
 
         /*Fixes the display of the nav blocks in the expanded menu*/
         #nav-toggle:checked~.left-nav {
-            display: flex;
-            background: rgba(36, 39, 72, 1);
-            position: absolute;
+            position: fixed;
             order: 1;
-            top: 10%;
+            top: 6rem;
+            align-content: start;
         }
 
         #nav-toggle:checked~.right-nav {
-            display: flex;
-            background: rgba(36, 39, 72, 1);
-            position: absolute;
             order: 2;
-        }
-
-        #nav-toggle:checked~#nav-gap {
-            color: rgba(36, 39, 72, 1);
+            align-content: start;
+            position: fixed;
+            top: 11rem;
         }
 
         /*Styles hamburger icon*/
@@ -89,20 +92,22 @@ body {
         .logo {
             order: 2;
             /*Flex properties to stack image and text on small screens*/
-            display: flex;
-            flex-direction: row;
-            align-content: flex-start;
             flex-wrap: wrap;
-            justify-content: space-evenly;
+            justify-content: center;
+            display: flex;
         }
 
         .logo-img {
-            height: 18rem;
+            height: auto;
+            width: 50%;
+            padding-top: 1rem;
         }
 
         .logo-text {
             color: #cda716;
             text-decoration: none;
+            font-size: calc(17px + 3vw);
+            
         }
 
         /*Nav bar*/
